--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <title>莫雨轩</title>
 
 <h1>可爱杨斌的照片网站</h1>
-<p><i>工作中的他井井有条</p><p>生活里的他永远微笑</p><p>祝你万事顺遂，春风得意</p><p>愿你阅尽千帆，前程似锦</p></i><br>
-<p><u><i>以此网站纪念我们最可爱的同学——杨斌</i></u></p>
+<p style="color: red;"><i>工作中的他井井有条</p><p style="color: red;">生活里的他永远微笑</p><p style="color: red;">祝你万事顺遂，春风得意</p><p style="color: red;">愿你阅尽千帆，前程似锦</p></i><br>
+<p style="color: red;"><u><i>以此网站纪念我们最可爱的同学——杨斌</i></u></p>
 <body style="background-image: url('https://s21.ax1x.com/2024/11/12/pAcT7rR.md.jpg');">
 <a href="https://imgse.com/i/pAcTHq1"><img src="https://s21.ax1x.com/2024/11/12/pAcHDns.jpg" style="height: 300px;"></a>
 <a href="https://imgse.com/i/pAcTHq1"><img src="https://s21.ax1x.com/2024/11/12/pAcTHq1.md.jpg" alt="pAcTHq1.md.jpg" border="0" style="height: 300px;"></a>
